--- a/pawplan/core/templates/home.html
+++ b/pawplan/core/templates/home.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Welcome to Our Website</h1>
+    <h1>Welcome to PawPlan</h1>
     <div class="content">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
